Fix mobile nav drop down too small for content

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,7 +85,7 @@ body{
     }
 
     .header__nav-mobile--links{
-        width: 300px;
+        width: 320px;
         background-color: $secondary-color;
         display: flex;
         flex-flow: column;
@@ -110,6 +110,7 @@ body{
             display: flex;
             flex-flow: row nowrap;
             gap: 2vw;
+            justify-content: flex-start;
             align-items: center;
             font-size: 1rem;
             font-weight: 1000;
@@ -119,6 +120,7 @@ body{
             padding: 7px;
             background: transparent;
             border: none;
+            text-align: left;
         }
 
         .header__dropdown-item:hover{
@@ -138,78 +140,6 @@ body{
     display: none;
 }
 
-
-
-@media only screen and (min-width: 1200px) {
-    html{
-        font-size: 20px;
-    }
-
-    .spacer{
-        background-color:#073E9D;
-        width: 100%;
-        height: 150px;
-    }
-
-    .landing-page__wave{
-        display: block;
-    }
-    
-    header{
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-
-        .header__logo-container{
-            gap: 0.5vw;
-            cursor: pointer;
-            text-decoration: none;
-
-            .header__logo{
-                height: 60px;
-                width: 60px;
-            }
-        }
-
-        .header__text-logo{
-            font-size: 1.4rem !important;
-        }
-
-        .header__nav-desktop--links{
-            text-decoration: none;
-            color: white;
-            font-weight: 500;
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            // transition-duration: 200ms;
-        }
-        .header__nav-desktop--links:link, .header__nav-desktop--links:visited, .header__nav-desktop--links:active{
-            text-decoration: none;
-        }
-    
-        .header__nav-desktop--links:hover{
-             color: #e1e1dd;
-            //  scale: 1.1;
-        }
-    
-        .header__sub{
-            font-size: 0.9rem !important;
-        }
-
-        .header__nav-desktop{
-            display: flex;
-            flex-flow: row nowrap;
-            gap: 5vw;
-            align-items: center;
-            justify-content: center;
-        }
-        
-        .header__nav-mobile{
-            display: none;
-        }
-    }
-}
 
 main{
     display: flex;
@@ -262,7 +192,7 @@ main{
             box-shadow: 5px 5px rgb(186, 185, 185);
             width: 90vw;
             height:70px;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-weight: 500;
             border-radius: 20px;
         }
@@ -278,7 +208,7 @@ main{
     }
 
     .landing-page__img{
-        width: 250px;
+        width: 210px;
     }
 }
 
@@ -372,6 +302,77 @@ main{
                     cursor: pointer;
                 }
             }
+        }
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    html{
+        font-size: 20px;
+    }
+
+    .spacer{
+        background-color:#073E9D;
+        width: 100%;
+        height: 150px;
+    }
+
+    .landing-page__wave{
+        display: block;
+    }
+    
+    header{
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+
+        .header__logo-container{
+            gap: 0.5vw;
+            cursor: pointer;
+            text-decoration: none;
+
+            .header__logo{
+                height: 60px;
+                width: 60px;
+            }
+        }
+
+        .header__text-logo{
+            font-size: 1.4rem !important;
+        }
+
+        .header__nav-desktop--links{
+            text-decoration: none;
+            color: white;
+            font-weight: 500;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            // transition-duration: 200ms;
+        }
+        .header__nav-desktop--links:link, .header__nav-desktop--links:visited, .header__nav-desktop--links:active{
+            text-decoration: none;
+        }
+    
+        .header__nav-desktop--links:hover{
+             color: #e1e1dd;
+            //  scale: 1.1;
+        }
+    
+        .header__sub{
+            font-size: 0.9rem !important;
+        }
+
+        .header__nav-desktop{
+            display: flex;
+            flex-flow: row nowrap;
+            gap: 5vw;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .header__nav-mobile{
+            display: none;
         }
     }
 }
